# lahuta

./: .clang-format  .gitignore  .gitmodules  .pylintrc  CMakeLists.txt  CONTRIBUTING.md  HISTORY.md  Makefile  README.md  THIRD-PARTY-NOTICES.md  bitvec.cpp  bond_order.cpp  bond_utils.cpp  bond_utils.hpp  bonds.cpp  bonds.hpp  call_nsgrid.py  conftest.py  conv.cpp  conv.hpp  elements.cpp  kekulize.cpp  kekulize.h  lahuta.toml  main.cpp  main.py  mkdocs.yml  mypy.ini  nsgrid.cpp  nsgrid.hpp  pyproject.toml  pyrightconfig.json  pytest.ini  run.py  setup.py  tests.sh
cli/: CMakeLists.txt  main.cpp
cli/lahuta/: CMakeLists.txt  main.cpp
cli/lahuta/cli/: arg_validation.cpp  extension_utils.hpp  global_flags.hpp  global_options.cpp  global_options.hpp  run_report.hpp  time_utils.hpp
cli/lahuta/commands/: contacts.cpp  contacts.hpp  createdb.cpp  createdb.hpp  extract.cpp  extract.hpp  positions.cpp  positions.hpp  quality_metrics.cpp  quality_metrics.hpp  reporting.hpp
cli/parsing/: arg_validation.cpp  arg_validation.hpp  extension_utils.hpp  global_args.hpp  parsed_args.cpp  parsed_args.hpp  usage_error.hpp
cli/runner/: app.cpp  app.hpp  command_runner.cpp  command_runner.hpp  global_flags.hpp  pipeline_plan.cpp  pipeline_plan.hpp  reporting.hpp  run_report.hpp  time_utils.hpp
cli/schemas/: option_schema.cpp  option_schema.hpp  shared_options.cpp  shared_options.hpp
cli/specs/: command_spec.hpp  compaction_rg_spec.cpp  contacts_spec.cpp  createdb_spec.cpp  dssp_spec.cpp  extract_spec.cpp  positions_spec.cpp  quality_metrics_spec.cpp  sasa_sr_spec.cpp  shape_metrics_spec.cpp
cli/tasks/: compaction_rg_summary_sink.cpp  compaction_rg_summary_sink.hpp  compaction_rg_task.cpp  compaction_rg_task.hpp  contacts_md_source.cpp  contacts_md_source.hpp  positions_task.cpp  positions_task.hpp  processing_counters.hpp  quality_metrics_task.cpp  quality_metrics_task.hpp  shape_metrics_summary_sink.cpp  shape_metrics_summary_sink.hpp  shape_metrics_task.cpp  shape_metrics_task.hpp
core/: CMakeLists.txt
core/apps/: getcontacts_example.cpp  main.cpp  md_stage_manager_example.cpp  nmr_pipeline_example.cpp  nmr_stage_manager_example.cpp  use_resolver.cpp
core/cmake/: LahutaVersion.cmake
core/data/: results_arom.txt  results_arom_updated.txt  ubi.cif
core/data/contacts/: 1kx2_arpeggio.json  1kx2_getcontacts.json  1kx2_molstar.json  1kx2_molstar_cli.json  1kx2_molstar_cli_raw.json  1tqn_arpeggio.json  1tqn_getcontacts.json  1tqn_molstar.json  Q57552_arpeggio.json  Q57552_getcontacts.json  Q57552_molstar.json  min_af2_ala_molstar_cli.json
core/examples/: CMakeLists.txt  getcontacts_example.cpp  lmdb_examples.cpp  md_pipeline_example.cpp  md_stage_manager_example.cpp  nmr_pipeline_example.cpp  nmr_stage_manager_example.cpp  run_valence_script.cpp  system_topology_pipeline_example.cpp  use_resolver.cpp
core/progs/: CMakeLists.txt  get_dssp_data.cpp  get_organism_data.cpp  get_plddt_data.cpp  get_position_data.cpp  get_sequence_data.cpp
core/python/: contacts.cpp  contacts.hpp  ent.cpp  ent.hpp  lahuta.cpp  py_te.cpp
core/src/: aligner.hpp  aromatics.cpp  aromatics.hpp  bonds.cpp  bonds.hpp  common.hpp  contact_types.hpp  convert.cpp  definitions.hpp  extract.hpp  factorize.hpp  find_rings.hpp  kd_index.cpp  kd_index.hpp  kd_tree.hpp  kd_tree.tpp  lahuta.cpp  lahuta.hpp  logging.cpp  logging.hpp  luni_processor.hpp  luni_props.cpp  mapper.hpp  neighbors.cpp  neighbors.hpp  nsgrid.cpp  nsgrid.hpp  nsresults_tls.hpp  planarity.hpp  prefilter.hpp  read_file.hpp  read_mmcif.hpp  residues.cpp  residues.hpp  rings.hpp  runtime.hpp  score_matrix.hpp  seq.hpp  seq_aligner.hpp  seq_aligner_builder.hpp  (+12 more)
core/src/bonds/: bond_order.cpp  bond_order.hpp  bonds.cpp  bonds.hpp  clean_bonds.cpp  clean_bonds.hpp  lookup.hpp  rules.hpp
core/src/chemistry/: atom_typing.hpp  common.hpp  elements.hpp  geometry.cpp  geometry.hpp  group_typing.hpp  heuristics.hpp  neighbors.cpp  neighbors.hpp  predicates.cpp  predicates.hpp  utils.hpp  valence_model.cpp  valence_model.hpp
core/src/cli/: arg_validation.cpp  arg_validation.hpp  global_flags.hpp
core/src/commands/: contacts.cpp  createdb.cpp
core/src/compute/: _defs.hpp  compute_base.hpp  compute_impl.hpp  context.hpp  dependency.hpp  engine.hpp  error.hpp  label.hpp  node.hpp  parameters.hpp  pipeline.hpp  plan.hpp  registry.hpp  result.hpp  runners.hpp  topology_snapshot.hpp
core/tests/: CMakeLists.txt  bit_reader_tests.cpp  main.cpp  test_nsgrid_degenerate_dimensions.cpp  test_rdkit_ringinfo.cpp  test_sasa_sr_basic.cpp  test_sasa_sr_bitmask.cpp  test_sasa_sr_edge_cases.cpp  test_sasa_sr_oracle.cpp  test_sasa_sr_precision.cpp  xtc_reader_integration_tests.cpp
cpp/: .clang-format  .gitignore  CMakeLists.txt  Makefile  create_db.cpp  lahuta_demo.cpp  main.cpp  main_align.cpp  main_fseek.cpp  main_future.cpp  main_threads.cpp  read_db.cpp  run.py  tests.sh
cpp/data/: 1kx2_small.expect  1tqn.expect  results_arom_updated.txt
cpp/include/: aligner.hpp  aromatics.hpp  atom_types.hpp  backtrace.hpp  bond_order.hpp  bonds.hpp  common.hpp  convert.hpp  definitions.hpp  distances.hpp  elements.hpp  entities.hpp  entity.hpp  extract.hpp  file_system.hpp  find_rings.hpp  lahuta.hpp  lahuta_aligner_p.hpp  logging.hpp  luni_processor.hpp  luni_props.hpp  mapper.hpp  neighbors.hpp  nn.hpp  nodes.hpp  nsgrid.hpp  operators.hpp  parallel.hpp  parser.hpp  planarity.hpp  prefilter.hpp  processor.hpp  radix_sort.hpp  read_mmcif.hpp  residues.hpp  rings.hpp  score_matrix.hpp  seq.hpp  seq_aligner.hpp  seq_aligner_builder.hpp  (+7 more)
cpp/python/: array.cpp  array.hpp  at.cpp  at.hpp  common.cpp  common.hpp  contacts.cpp  ent.cpp  ent.hpp  lahuta.cpp  logger_py.cpp  logger_py.hpp  py_align.cpp  py_align.hpp  py_properties.cpp  py_properties.hpp  py_te.cpp  py_te.hpp
cpp/src/: aromatics.cpp  aromatics.hpp  bond_order.cpp  bonds.cpp  convert.cpp  entities.cpp  lahuta.cpp  logging.cpp  luni_props.cpp  neighbors.cpp  nn.cpp  nsgrid.cpp  residues.cpp  residues.hpp  struct_unit.cpp  topology.cpp  valence_model.cpp  visitor.cpp
interop/python/: README.md  pyproject.toml
(+1249 files in other folders)
