[build-system]
requires = ['hatchling', "setuptools", "wheel"]
build-backend = 'hatchling.build'

[tool.hatch.version]
path = 'lahuta/_version.py'

[project]
name = 'lahuta'
description = 'Analysis of non-covalent interactions in biomolecular systems.'
authors = [
    {name = 'Besian I. Sejdiu', email = 'besian.sejdiu@stjude.org'},
]
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Programming Language :: Python',
    'Programming Language :: Python :: Implementation :: CPython',
    'Programming Language :: Python :: Implementation :: PyPy',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3 :: Only',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Intended Audience :: Science/Research',
    'Intended Audience :: Developers',
    'Operating System :: Unix',
    'Operating System :: POSIX :: Linux',
    'Environment :: Console',
    'Environment :: MacOS X',
    'Topic :: Scientific/Engineering :: Bio-Informatics :: Molecular Dynamics :: Contacts',
    'Topic :: Atomic :: Contacts',
]
requires-python = '>=3.10'
dependencies = [
    'typing-extensions>=4.6.1',
]
dynamic = ['version', 'readme']

[project.urls]
Homepage = 'https://github.com/bisejdiu/lahuta'
Source = 'https://github.com/bisejdiu/lahuta'

[tool.black]
color = true
line-length = 120
target-version = ['py310']
skip-string-normalization = true

[tool.pyright]
include = ["lahuta"]
exclude = ["lahuta/scripts", "lahuta/docs", "lahuta/tests", "**/__pycache__", "cachedir"]
defineConstant = { DEBUG = true }
reportMissingImports = true
reportMissingTypeStubs = "none"

reportUnknownVariableType = false
reportUnknownMemberType = false

[tool.pylint.basic]
good-names = [
    'i', 
    'j',
    'k',
    'df', 
    'ag',
    'uv', 
    'ns',
    'ix',
]

[tool.pylint.'MASTER']
  extension-pkg-allow-list = ["gemmi"]

[tool.pylint.'MESSAGES CONTROL']
max-line-length = 120
disable = 'too-many-lines'


[tool.mypy]
python_version = "3.10"
check_untyped_defs = true
disallow_any_generics = true
ignore_missing_imports = true
warn_no_return = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = false
disallow_untyped_defs = true
disallow_untyped_calls = true
strict_optional = true
no_implicit_optional = true
strict_equality = true
strict = true
show_error_codes = true

exclude = "docs|cachedir|scripts|tests|__pycache__"

[tool.pytest.ini_options]
testpaths = ["tests"]
