[build-system]
requires = ['hatchling', "setuptools", "wheel"]
build-backend = 'hatchling.build'

[tool.hatch.version]
path = 'lahuta/_version.py'

[project]
name = 'lahuta'
description = 'Analysis of non-covalent interactions in biomolecular systems.'
authors = [
    {name = 'Besian I. Sejdiu', email = 'besian.sejdiu@stjude.org'},
]
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3 :: Only',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Intended Audience :: Science/Research',
    'Intended Audience :: Developers',
    'Operating System :: Unix',
    'Operating System :: POSIX :: Linux',
    'Environment :: Console',
    'Environment :: MacOS X',
    'Topic :: Scientific/Engineering',
    'Topic :: Scientific/Engineering :: Bio-Informatics',
    'Topic :: Scientific/Engineering :: Chemistry',
]
requires-python = '>=3.8'
dependencies = [
    # core
    'gemmi>0.6.0',
    'MDAnalysis>=2.5.0, <3.0.0',
    'openbabel>=3.1.0',
    'typer>=0.9.0',
    'rich>=13.5.1',
    # 'typing-extensions>=4.6.1',
]
dynamic = ['version', 'readme']

[project.urls]
Homepage = 'https://github.com/bisejdiu/lahuta'
Source = 'https://github.com/bisejdiu/lahuta'

[tool.black]
color = true
line-length = 120
target-version = ['py310']
skip-string-normalization = true

# [tool.pyright]
# include = ["lahuta"]
# exclude = ["lahuta/scripts", "lahuta/docs", "lahuta/tests", "**/__pycache__", "cachedir"]
# defineConstant = { DEBUG = true }
# reportMissingImports = true
# reportMissingTypeStubs = "none"

# reportUnknownVariableType = false
# reportUnknownMemberType = false

# [tool.pylint.basic]
# good-names = [
#     'i', 
#     'j',
#     'k',
#     'df', 
#     'ag',
#     'uv', 
#     'ns',
#     'ix',
# ]

# [tool.pylint.'MASTER']
#   extension-pkg-allow-list = ["gemmi"]

# [tool.pylint.'MESSAGES CONTROL']
# max-line-length = 120
# disable = 'too-many-lines'

[tool.ruff]
line-length = 120
extend-select = [
    'Q', 'RUF100', 'C90', 'I', 'D', 'TID', 'B', 'A', 'COM', 'C4', 
    'ARG', 'TCH', 'PTH', 'NPY', 'SLF', 'ANN', 'BLE', #'FBT001',
    'PYI', 'PT', 'RET', 'SIM', 'INT', 'TD', 'FIX', 
    'ERA', 'PD', 'PL',  'TRY', 'FLY', 'PERF', 'RUF'
]
# E501 is handled by black
ignore = [
'A003', 
'ANN101',
'ANN102',
'ANN204', 
'D406', 
'D407',
'TD003', 
'COM812', 
'PLR2004',
'TRY003',
'FIX002', 
'D203',
'D213',
'D105', 'D107', 'D205', 'D415'
] # 'E501'

mccabe = { max-complexity = 14 }
isort = { known-first-party = ['lahuta', 'tests', 'bin'] }
target-version = "py39"
exclude=['lahuta/cachedir']

dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.pylint]
max-args = 6

[tool.ruff.per-file-ignores]
'lahuta/contacts/_ctx_mngrs.py' = ['ANN']
'lahuta/lahuta_types/mda_commands.py' = ['PLR0913']
'lahuta/lahuta_types/mdanalysis.py' = ['D101', 'D102', 'ANN401']
'lahuta/lahuta_types/openbabel.py' = ['D101', 'D102', 'ANN401']
'bin/lahuta' = ['A002', 'B008', 'PLR0913']

[tool.mypy]
python_version = "3.10"
check_untyped_defs = true
disallow_any_generics = true
ignore_missing_imports = true
warn_no_return = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = false
disallow_untyped_defs = true
disallow_untyped_calls = true
strict_optional = true
no_implicit_optional = true
strict_equality = true
strict = true
show_error_codes = true

exclude = "docs|cachedir|scripts|tests|__pycache__"

[tool.pytest.ini_options]
testpaths = ["tests"]
