[build-system]
requires = ['hatchling']
build-backend = 'hatchling.build'

[tool.hatch.version]
path = 'lahuta/_version.py'

[project]
name = 'lahuta'
description = 'Analysis of non-covalent interactions in biomolecular systems.'
authors = [
    {name = 'Besian I. Sejdiu', email = 'besian.sejdiu@stjude.org'},
]
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3 :: Only',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Intended Audience :: Science/Research',
    'Intended Audience :: Developers',
    'Operating System :: Unix',
    'Operating System :: POSIX :: Linux',
    'Environment :: Console',
    'Environment :: MacOS X',
    'Topic :: Scientific/Engineering',
    'Topic :: Scientific/Engineering :: Bio-Informatics',
    'Topic :: Scientific/Engineering :: Chemistry',
]
requires-python = '>=3.10'
dependencies = [
    'gemmi>=0.6.0',
    'MDAnalysis>=2.5.0, <3.0.0',
    'openbabel>=3.1.0',
    'typer>=0.9.0',
    'rich>=13.5.1',
]
dynamic = ['version', 'readme']

[project.urls]
Homepage = 'https://github.com/bisejdiu/lahuta'
Source = 'https://github.com/bisejdiu/lahuta'
Documentation = 'https://bisejdiu.github.io/lahuta'

[project.scripts]
lahuta = "lahuta.bin:lahuta"

[tool.black]
color = true
line-length = 120
target-version = ['py310']
skip-string-normalization = true

[tool.ruff]
line-length = 120
extend-select = [
    'A', 'ANN', 'ARG', 'B', 'BLE', 'C4', 'C90', 'COM', 'D', 'ERA',
    'FIX', 'FLY', 'I', 'INT', 'NPY', 'PD', 'PERF', 'PL', 'PT', 'PTH',
    'PYI', 'Q', 'RET', 'RUF', 'RUF100', 'SIM', 'SLF', 'TD', 'TCH', 'TID',
    'TRY'
]
ignore = [
    'A003', 'ANN101', 'ANN102', 'ANN204', 'COM812', 'D105', 'D107', 'D203',
    'D205', 'D213', 'D406', 'D407', 'D415', 'ERA001', 'FIX002', 'PLR2004', 'PLW0127', 'TD003',
    'TRY003', 'PT018', 'R504'
]

mccabe = { max-complexity = 14 }
isort = { known-first-party = ['lahuta', 'tests', 'bin'] }
target-version = "py310"
exclude=['lahuta/scripts', 'cachedir', 'tests', 'docs/plugins']

dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.pylint]
max-args = 6

[tool.ruff.per-file-ignores]
'lahuta/contacts/_ctx_mngrs.py' = ['ANN']
'lahuta/_types/mda_commands.py' = ['PLR0913']
'lahuta/_types/gemmi.py' = ['ANN401', 'D101', 'D102']
'lahuta/_types/mdanalysis.py' = ['ANN401', 'D101', 'D102']
'lahuta/_types/openbabel.py' = ['ANN401', 'D101', 'D102']
'lahuta/bin.py' = ['A002', 'B008', 'D400', 'PLR0913']
'lahuta/api/processors.py' = ['PTH118', 'PTH119', "B008"]
'lahuta/api/workers.py' = ['PTH118', 'PTH119']
'lahuta/msa/muscle.py' = ['PTH110', 'PTH107', 'PTH123']
'lahuta/msa/mafft.py' = ['PTH110', 'PTH107', 'PTH123']
'lahuta/core/index_finder.py' = ['PERF401']


[tool.mypy]
python_version = "3.10"
check_untyped_defs = true
disallow_any_generics = true
ignore_missing_imports = true
warn_no_return = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = false
disallow_untyped_defs = true
disallow_untyped_calls = true
strict_optional = true
no_implicit_optional = true
strict_equality = true
strict = true
show_error_codes = true
disallow_untyped_decorators = false
disable_error_code = ["no-redef"]


exclude = "docs|cachedir|scripts|__pycache__"

[tool.pytest.ini_options]
testpaths = ["tests"]
minversion = 7.4
addopts = "--maxfail=18"
log_level = "INFO"
